# Game

./: .gitignore  ReadMe.md
Solutions/Android/: local.properties
Solutions/Android/app/: build.gradle
Solutions/Linux/: CMakeLists.txt
Solutions/Linux/Audio/: CMakeLists.txt
Solutions/Linux/Console/: CMakeLists.txt
Solutions/Linux/ECSL/: CMakeLists.txt
Solutions/Linux/FileSystem/: CMakeLists.txt
Solutions/Linux/Game/: CMakeLists.txt
Solutions/Linux/Input/: CMakeLists.txt
Solutions/Linux/Logger/: CMakeLists.txt
Solutions/Linux/LuaEmbedder/: CMakeLists.txt
Solutions/Linux/MPL/: CMakeLists.txt
Solutions/Linux/Network/: CMakeLists.txt
Solutions/Linux/Renderer/: CMakeLists.txt
Solutions/OSX/Neanderfall.xcodeproj/: project.pbxproj
Solutions/OSX/StoraSpel/: Info.plist
Solutions/OSX/StoraSpel.xcodeproj/: project.pbxproj
Solutions/Windows/: Game.sln  Game.sln.orig
Solutions/Windows/AndroidRenderer/: AndroidRenderer.vcxproj  AndroidRenderer.vcxproj.filters
Solutions/Windows/Audio/: Audio.vcxproj  Audio.vcxproj.filters
Solutions/Windows/Console/: Console.vcxproj  Console.vcxproj.filters
Solutions/Windows/Directory/: Directory.vcxproj  Directory.vcxproj.filters
Solutions/Windows/ECSL/: ECSL.vcxproj  ECSL.vcxproj.filters
Solutions/Windows/Game/: Game.vcxproj  Game.vcxproj.filters  Game.vcxproj.orig  MapIslandCreatorSystem.cpp  MapIslandCreatorSystem.h  Pathfinder.cpp  Pathfinder.h  resource.h
Solutions/Windows/Input/: Input.vcxproj  Input.vcxproj.filters
Solutions/Windows/Logger/: Logger.vcxproj  Logger.vcxproj.filters
Solutions/Windows/LuaEmbedder/: LuaEmbedder.vcxproj  LuaEmbedder.vcxproj.filters
Solutions/Windows/MPL/: MPL.vcxproj  MPL.vcxproj.filters
Solutions/Windows/Network/: Network.vcxproj  Network.vcxproj.filters
Solutions/Windows/Renderer/: Renderer.vcxproj  Renderer.vcxproj.filters  Renderer.vcxproj.filters.orig  Renderer.vcxproj.filters.orig.orig  Renderer.vcxproj.orig  Renderer.vcxproj.orig.orig
Solutions/iOS/: ResourcePath.h  ResourcePath.mm
Solutions/iOS/Neanderfall.xcodeproj/: project.pbxproj
Solutions/iOS/StoraSpel/: Info kopia.plist  Info.plist
Solutions/iOS/StoraSpel.xcodeproj/: project.pbxproj
Solutions/iOS/StoraSpel_OSX/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
Solutions/iOS/StoraSpel_OSXTests/: Info.plist  StoraSpel_OSXTests.m
Source/AndroidRenderer/: .GraphicDevice.cpp.kate-swp  AModel.cpp  AModel.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Fire.cpp  Fire.h  GraphicDevice.cpp  GraphicDevice.h  GraphicsHigh.cpp  GraphicsHigh.h  GraphicsLow.cpp  GraphicsLow.h  Model.cpp  Model.h  ModelExporter.h  ModelLoader.h  ParticleEffect.cpp  ParticleEffect.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  SkyBox.cpp  SkyBox.h  Smoke.cpp  Smoke.h  TextRenderer.cpp  TextRenderer.h  TextureLoader.h  stdafx.h
Source/AndroidRenderer/Particles/: Explosion.cpp  Explosion.h  Fire.cpp  Fire.h  ParticleEffect.cpp  ParticleEffect.h  Smoke.cpp  WaterSpawn.cpp  WaterSpawn.h  Waterfall.cpp  Waterfall.h
Source/Audio/: .Audio.cpp.kate-swp  Audio.cpp  Audio.h
Source/Console/: Console.cpp  Console.h
Source/ECSL/: ECSL.cpp  ECSL.h
Source/ECSL/Common/: BitSet.h
Source/ECSL/Framework/: Simulation.cpp  Simulation.h  Test.cpp  Test.h  World.cpp  World.h  WorldCreator.cpp  WorldCreator.h  WorldInitializer.cpp  WorldInitializer.h
Source/ECSL/Interfaces/: System.cpp  System.h
Source/ECSL/Managers/: ComponentManager.cpp  ComponentManager.h  ComponentTypeManager.cpp  ComponentTypeManager.h  EntityTemplateManager.cpp  EntityTemplateManager.h
Source/FileSystem/: Directory.cpp  Directory.h  File.cpp  File.h  MD5.cpp  MD5.h  dirent.h
Source/Game/: DynamicScripting.cpp  DynamicScripting.h  Game.cpp  Game.cpp.orig  Game.cpp.orig.orig  GameClient.cpp  GameClient.h  GameConsole.cpp  GameConsole.h  GameCreator.cpp  GameCreator.h  GameServer.cpp  GameServer.h  GameShared.cpp  GameShared.h  HomePath.cpp  HomePath.h  LoadingScreen.cpp  LoadingScreen.h  NetworkInstance.cpp  NetworkInstance.h  NewGame.cpp  Pathfinder.cpp  Pathfinder.h  Quaternion.cpp  Quaternion.h  RemoteConsole.cpp  RemoteConsole.h  ResourceManager.cpp  ResourceManager.h  RuleManager.cpp  RuleManager.h  TextInput.cpp  TextInput.h  Timer.cpp  Timer.h
Source/Game/FrameCounter/: FrameCounter.cpp  FrameCounter.h
Source/Game/Logger/: Logger.cpp  Logger.h
Source/Game/LuaBridge/: LuaBridge.cpp  LuaBridge.h
Source/Game/MeshCreator/: MeshCreator.cpp  MeshCreator.h  Tile.cpp  Tile.h  includes.h
Source/Game/Network/: ClientDatabase.cpp  ClientDatabase.h  ClientManager.cpp  ClientManager.h  ConnectHelper.cpp  ConnectHelper.h  NetworkHelper.cpp  NetworkHelper.h  NetworkInstance.cpp  (+1 more)
Source/Input/: InputEnums.h  InputWrapper.cpp  InputWrapper.h
Source/LuaEmbedder/: LuaClassHandle.h  LuaEmbedder.cpp  LuaEmbedder.h  LuaNumberArray.cpp  LuaNumberArray.h  Luna.h  LunaArray.h
Source/MPL/: MPL.h
Source/Network/: BaseNetwork.cpp  BaseNetwork.cpp.orig  BaseNetwork.h  Client.cpp  Client.h  ClientNetwork.cpp  ClientNetwork.h  ISocket.cpp  ISocket.h  LinSocket.cpp  LinSocket.h  MD5.cpp  MD5.h  NetConnection.cpp  NetConnection.h  NetTypeMessageID.h  Network.h  Networkv2.cpp  Packet.cpp  Packet.h  PacketHandler.cpp  PacketHandler.h  README.md  Rijndael.cpp  Rijndael.h  Server.cpp  Server.h  ServerNetwork.cpp  ServerNetwork.h  Stdafx.cpp  Stdafx.h  WinSocket.cpp  WinSocket.h  stdafx.cpp
Source/Renderer/: AModel.cpp  AModel.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  DebugText.h  GLTimer.cpp  GLTimer.h  GraphicDevice.cpp  GraphicDevice.cpp.orig  GraphicDevice.cpp.orig.orig  GraphicDevice.cpp.orig.orig.orig  GraphicDevice.h  GraphicDevice.h.orig  GraphicDevice.h.orig.orig  GraphicsHigh.cpp  GraphicsHigh.h  GraphicsLow.cpp  GraphicsLow.h  Model.cpp  Model.h  ModelExporter.h  ModelLoader.h  ParticleSystem.cpp  ParticleSystem.h  Shader.cpp  Shader.cpp.orig  Shader.h  Shader.h.orig  ShadowMap.cpp  ShadowMap.h  SimpleText.cpp  SimpleText.cpp.orig  SimpleText.h  SkyBox.cpp  SkyBox.h  TextRenderer.cpp  TextRenderer.h  TextureLoader.h  (+5 more)
(+319 files in other folders)
